Various clarifications suggested by TheDamian++ Explicit pipe target is now @(*) or @@(*). Separated clobbering <== ==> from pushy <<== and ==>> Pushy pipes can now be stacked on filters as well as sinks. $?BLOCK and other contexts now consistently return a list of labels.
git-svn-id: http://svn.pugscode.org/pugs@23791 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 11 Mar 2007
+  Last Modified: 12 Mar 2007
   Number: 2
-  Version: 94
+  Version: 95
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -1648,7 +1648,7 @@ Here are some possibilities:
     @?ROUTINE   Which nested routines am I in?
     &?BLOCK     Which block am I in?
     @?BLOCK     Which nested blocks am I in?
-    $?LABEL     Which block label am I in?
+    $?LABEL     Which innermost block label am I in?
     @?LABEL     Which nested block labels am I in?
 
 All the nested C<@?> variables are ordered from the innermost to the
@@ -2472,8 +2472,8 @@ yourself.  Each chunk has a C<.range> property that indicates its
 line number range within the source file.
 
 The lexical routine itself is C<&?ROUTINE>; you can get its name with
-C<&ROUTINE.name>.  The current block is C<&?BLOCK>.  If the block has a label,
-that shows up in C<&?BLOCK.label>.  Within the lexical scope of
+C<&ROUTINE.name>.  The current block is C<&?BLOCK>.  If the block has any
+labels, those shows up in C<&?BLOCK.labels>.  Within the lexical scope of
 a statement with a label, the label is a pseudo-object representing
 the dynamic context of that statement.  (If inside multiple dynamic
 instances of that statement, the label represents the innermost one.)
