--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -12,9 +12,9 @@ Luke Palmer <luke@luqui.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 8 Mar 2004
-  Last Modified: 12 Mar 2007
+  Last Modified: 13 Mar 2007
   Number: 3
-  Version: 108
+  Version: 109
 
 =head1 Overview
 
@@ -3183,9 +3183,14 @@ simple declaration that declares a single variable, along with its
 associated type, traits and the initializer:
 
     constant $foo = 123;    # okay: initializes $foo to 123
-    constant ($foo = 123);  # same thing
+    constant ($foo = 123);  # same thing (with explicit parens)
     constant :($foo = 123); # same thing (full Signature form)
     constant ($foo) = 123;  # wrong: constants cannot be assigned to
+
+List-context assignment is supported for simple declarations:
+
+    constant @foo = 1,2,3;      # okay: initializes @foo to (1,2,3)
+    constant (@foo = 1,2,3);    # wrong: 2 and 3 are not variable names
 
 When parentheses are omitted, you may use an infix assignment operator
 instea dof C<=> as the initializer.  In that case, the left hand side of
@@ -3193,8 +3198,8 @@ the infix operator will be the variable's prototype object:
 
     constant Dog $fido .= new;      # okay: a constant Dog object
     constant Dog $fido = Dog.new;   # same thing
-    constant Dog $fido = $fido.new; # error: cannot refer to itself
-    constant (Dog $fido .= new);    # error: cannot use .= with parens
+    constant Dog $fido = $fido.new; # wrong: invalid self-reference
+    constant (Dog $fido .= new);    # wrong: cannot use .= with parens
 
 Parentheses must always be used when declaring multiple parameters:
 
