--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 13 Mar 2007
+  Last Modified: 14 Mar 2007
   Number: 2
-  Version: 96
+  Version: 97
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -2722,6 +2722,18 @@ To force non-lazy list flattening, use the C<eager> list operator.
 Don't use it on an infinite generator unless you have a machine with
 infinite memory, and are willing to wait a long time.  It may also
 be applied to a scalar iterator to force immediate iteration to completion.
+
+=item *
+
+A variant of C<eager> is the C<hyper> list operator, which declares
+not only that you want all the values generated now, but that you want
+them badly enough that you don't care what order they're generated in.
+That is, C<eager> requires sequential evaluation of the list, while
+C<hyper> requests (but does not require) parallel evaluation.  In any
+case, it declares that you don't care about the evaluation order.
+(Conjecture: populating a hash from a hyper list of pairs could be done
+as the results come in, such that some keys can be seen even before
+the hyper is done.  Thinking about Map-Reduce algorithms here...)
 
 =item *
 
