--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -14,7 +14,7 @@ Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
   Last Modified: 14 Mar 2007
   Number: 2
-  Version: 97
+  Version: 98
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -1936,11 +1936,16 @@ turns into C<('a')> rather than C<('a',)>.
 
 Two or more adverbs can always be strung together without intervening
 punctuation anywhere a single adverb is acceptable.  When used as
-named arguments in an argument list, you may put comma between,
+named arguments in an argument list, you I<may> put comma between,
 because they're just ordinary named arguments to the function, and
-a fatarrow pair would work the same.   When modifying an operator
-(that is, when one occurs where an operator is expected), you may
-not put commas between, and the fatarrow form is not allowd.  See S06.
+a fatarrow pair would work the same.  However, this comma is allowed
+only when the first pair occurs where a term is expected.  Where an
+infix operator is expected, the adverb is always taken as modifying
+the nearest preceding operator that is not hidden within parentheses,
+and if you string together multiple such pairs, you may not put commas
+between, since that would cause subsequent pairs to look like terms.
+(The fatarrow form is not allowed at all in operator position.)
+See S06 for the use of adverbs as named arguments.
 
 The negated form (C<:!a>) and the sigiled forms (C<:$a>, C<:@a>,
 C<:%a>) never take an argument and don't care what the next character is.
